[gd_scene load_steps=9 format=3 uid="uid://uh55o3k7n7me"]

[ext_resource type="Script" path="res://Scene/Main/M_Menu.gd" id="1_7if72"]
[ext_resource type="Shader" path="res://Assets/Shaders/M_MenuBG.gdshader" id="2_p8tvr"]
[ext_resource type="Shader" path="res://Assets/Shaders/M_Menu.gdshader" id="3_8r1q3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_13f76"]
shader = ExtResource("2_p8tvr")

[sub_resource type="CanvasTexture" id="CanvasTexture_2v6lb"]

[sub_resource type="Animation" id="Animation_7w2lh"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vb05e"]
_data = {
"RESET": SubResource("Animation_7w2lh")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_db55i"]
shader = ExtResource("3_8r1q3")
shader_parameter/iTime = null
shader_parameter/A_text = null
shader_parameter/B_text = null
shader_parameter/C_text = null
shader_parameter/D_text = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7if72")
metadata/_edit_use_anchors_ = true

[node name="MM_Background" type="TextureRect" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_13f76")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_2v6lb")
expand_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MM_Background")
libraries = {
"": SubResource("AnimationLibrary_vb05e")
}

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_db55i")
layout_mode = 0
offset_left = 424.0
offset_top = 64.0
offset_right = 744.0
offset_bottom = 384.0

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.139
anchor_right = 0.41
anchor_bottom = 0.835
offset_top = 0.0599937
offset_right = -3.05176e-05
offset_bottom = -0.100006

[node name="A" type="Label" parent="ItemList"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_right = 0.14
anchor_bottom = 0.075
offset_left = 0.0799999
offset_right = 0.0400009
text = "A = "

[node name="A_Line" type="LineEdit" parent="ItemList/A"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 8.828
anchor_bottom = 1.292
offset_right = -8.01199
offset_bottom = -0.00799942
placeholder_text = "sinh(TIME)"

[node name="B" type="Label" parent="ItemList"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.2
anchor_right = 0.14
anchor_bottom = 0.272
offset_left = 0.0799999
offset_right = 0.0400009
offset_bottom = -0.0400085
text = "B ="

[node name="B_Line" type="LineEdit" parent="ItemList/B"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 8.828
anchor_bottom = 1.348
offset_right = -8.01196
offset_bottom = -0.00400162
grow_horizontal = 0
placeholder_text = "cos((TIME * 2.0)/2.50)"

[node name="C" type="Label" parent="ItemList"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.4
anchor_right = 0.14
anchor_bottom = 0.472
offset_left = 0.0799999
offset_right = 0.0400009
offset_bottom = -0.0400085
text = "C ="

[node name="C_Line" type="LineEdit" parent="ItemList/C"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 8.828
anchor_bottom = 1.348
offset_right = -8.01196
offset_bottom = -0.00400162
grow_horizontal = 0
placeholder_text = "sin(TIME)"

[node name="D" type="Label" parent="ItemList"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.6
anchor_right = 0.14
anchor_bottom = 0.672
offset_left = 0.0799999
offset_right = 0.0400009
offset_bottom = -0.0400085
text = "D ="

[node name="D_Line" type="LineEdit" parent="ItemList/D"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 8.828
anchor_bottom = 1.348
offset_right = -8.01196
offset_bottom = -0.00400162
grow_horizontal = 0
placeholder_text = "1.0"

[node name="bottom_legend" type="Label" parent="ItemList"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = 91.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "COLOR = Vec4( A, B, C, D)"

[connection signal="text_changed" from="ItemList/A/A_Line" to="." method="A_line_text_changed"]
[connection signal="text_changed" from="ItemList/B/B_Line" to="." method="B_line_text_changed"]
[connection signal="text_changed" from="ItemList/C/C_Line" to="." method="C_line_text_changed"]
[connection signal="text_changed" from="ItemList/D/D_Line" to="." method="D_line_text_changed"]
